Ported showing and hiding of animal noise to use ng-animate

--- a/partials/animal.html
+++ b/partials/animal.html
@@ -2,10 +2,11 @@
     <div
         class="animal animal-{{ name }}"
         hm-tap="animal_ctrl.speak()"
+        ng-class="name"
     ></div>
 </section>
 <section class="section">
-    <div class="sound" ng-class="{'sound-hidden': !is_speaking}">
+    <div class="sound" ng-show="is_speaking" ng-animate>
         {{ sound }}
     </div>
 </section>
