--- a/partials/animal.html
+++ b/partials/animal.html
@@ -5,7 +5,7 @@
     ></div>
 </section>
 <section class="section">
-    <aside class="sound" ng-show="is_speaking" ng-animate>
+    <aside class="sound sound-{{ ::name }}" ng-show="is_speaking" ng-animate>
         {{ ::sound }}
     </aside>
 </section>
