--- a/css/main.scss
+++ b/css/main.scss
@@ -2,165 +2,5 @@
 ---
 
 @import "utils";
-
-body {
-	margin: 0;
-	padding: 0;
-
-}
-[ng-app] {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	overflow: hidden;
-}
-
-.section {
-	float: left;
-	width: 50%;
-}
-
-.explode {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-
-	@include transition(transform, 0.5s, ease-in-out);
-	@include transform-origin(25% 50%);
-	
-	&.ng-leave.ng-leave-active,
-	&.ng-enter {
-		@include transform(scale(0.1));
-	}
-
-	&.ng-leave,
-	&.ng-enter.ng-enter-active {
-		@include transform(scale(1));
-	}
-
-	z-index: 2;
-
-	& + & {
-		z-index: 1;
-	}
-}
-
-@include media-orientation-query(portrait) {
-	.explode {
-		@include transform-origin(50%);
-	}
-}
-
-.animal {
-	display: block;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: contain;
-	width: 45vw;
-	height: 90vh;
-	margin: 5vh auto 0;
-
-}
-
-@include media-orientation-query(portrait) {
-	.section {
-		float: none;
-		width: 100%;
-	}
-
-	.animal {
-		height: 45vh;
-		width: 90vw;
-	}
-}
-
-
-$animal-names: cat chicken cockerel cow dog donkey elephant fox horse leopard lion lioness monkey orangutan owl panda penguin pig puma reindeer sheep tiger zebra;
-@each $animal-name in $animal-names {
-    .animal-#{$animal-name} {
-        background-image: url("../img/#{$animal-name}.svg");
-
-    }
-}
-
-
-@include keyframes(sound-shake) {
-	0% {
-		@include transform(rotateZ(-10deg));
-	}
-
-	50% {
-		@include transform(rotateZ(10deg) scale(1.5));
-	}
-
-	100% {
-		@include transform(rotateZ(-10deg));
-	}	
-}
-
-.sound {
-	font-family: "Shojumaru", cursive;
-	font-size: 8vw;
-	text-align: center;
-	line-height: 100vh;
-	height: 100vh;
-
-	@include transform-origin(50%);
-	@include animation(sound-shake, 1.0s, forwards infinite);
-
-	&.ng-hide-add.ng-hide-add-active,
-	&.ng-hide-remove.ng-hide-remove-active {
-		@include transition(opacity, 0.5s, ease-in-out);
-	}
-
-	&.ng-hide {
-	  opacity: 0;
-	}
-}
-
-@include media-orientation-query(portrait) {
-	.sound {
-		height: 45vh;
-		line-height: 45vh;
-		margin-top: 5vh;
-		width: 100%;
-		font-size: 8vh;
-	}
-
-}
-
-$animal_colours: (
-	"cat": #6F6F6E,
-    "chicken": #B6382F,
-    "cockerel": #B6382F,
-    "cow": #68A284,
-    "dog": #723E2B,
-    "donkey": #4E7796,
-    "elephant": #AEAED3,
-    "fox": #AF5B2B,
-    "horse": #8E6451,
-    "leopard": #F39E2B,
-    "lion": #AF5B2B,
-    "lioness": #4B190D,
-    "monkey": #8E6451,
-    "orangutan": #EA8232,
-    "owl": #EA8232,
-    "panda": #3C3C3B,
-    "penguin": #2D466A,
-    "pig": #F29E9F,
-    "puma": #6F6F6E,
-    "reindeer": #F39E2B,
-    "sheep": #D3C5C1,
-    "tiger": #EA8232,
-    "zebra": #3C3C3B
-);
-
-@each $animal, $colour in $animal_colours {
-    .sound-#{$animal} {
-        color: $colour;
-    }
-}
+@import "layout";
+@import "animals";
