Increased time a tap is considered

--- a/partials/animal.html
+++ b/partials/animal.html
@@ -2,6 +2,7 @@
     <div
         class="animal animal-{{ ::name }}"
         hm-tap="animal_ctrl.speak()"
+        hm-recognizer-options='{"time":1000}'
     ></div>
 </section>
 <section class="section">
