--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,6 +14,14 @@ body {
     overflow: hidden;
 }
 
+h1 {
+    text-align: center;
+    font-size: 10vw;
+    line-height: 100vh;
+    margin: 0;
+    font-family: sans;
+}
+
 .section {
     float: left;
     width: 50%;
