Replaced tap interaction with click
Improves interaction on Nexus 4

--- a/partials/animal.html
+++ b/partials/animal.html
@@ -1,8 +1,7 @@
 <section class="section">
     <div
         class="animal animal-{{ ::name }}"
-        hm-tap="animal_ctrl.speak()"
-        hm-recognizer-options='{"time":1000}'
+        ng-click="animal_ctrl.speak()"
     ></div>
 </section>
 <section class="section">
