--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,13 +14,11 @@ body {
     overflow: hidden;
 }
 
-h1 {
-    text-align: center;
-    font-size: 10vw;
-    line-height: 100vh;
-    margin: 0;
-    font-family: sans;
+.loading {
+    margin: 30vh auto 0;
+    width: 100px;
 }
+
 
 .section {
     float: left;
