--- a/_sass/_utils.scss
+++ b/_sass/_utils.scss
@@ -47,3 +47,31 @@
     -webkit-animation: $name $duration $direction;
     animation: $name $duration $direction;
 }
+
+@mixin flexbox {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+@mixin flex-direction($value) {
+    -webkit-flex-direction: $value;
+    -moz-flex-direction: $value;
+    -ms-flex-direction: $value;
+    flex-direction: $value;
+}
+
+
+@mixin justify-content($value) {
+    -webkit-justify-content: $value;
+    -moz-justify-content: $value;
+    justify-content: $value;
+}
+
+@mixin align-items($value) {
+    -webkit-align-items: $value;
+    -moz-align-items: $value;
+    align-items: $value;
+}
