--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -40,20 +40,11 @@ body {
 }
 
 [ng-app] {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    overflow: hidden;
+    @include full-screen;
 }
 
 .explode {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    @include full-screen;
 
     @include transition(transform, 0.5s, ease-in-out);
     @include transform-origin(25% 50%);
