--- a/_sass/_utils.scss
+++ b/_sass/_utils.scss
@@ -75,3 +75,13 @@
     -moz-align-items: $value;
     align-items: $value;
 }
+
+
+@mixin full-screen {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+}
