--- a/_sass/_help.scss
+++ b/_sass/_help.scss
@@ -1,18 +1,80 @@
 @import "utils";
 
-.help {
-	@include full-screen;
-
-	background-color: rgba(150, 150, 150, 0.8);
-	z-index: 3;
-	font-family: "Shojumaru", cursive;
-    font-size: 3vw;
-    text-align: center;
-    color: #B6382F;
+@include keyframes(tap) {
+    0% {
+        @include transform(scale(2) translateY(200%));
+        opacity: 0;
+    }
+    45% {
+        opacity: 1;   
+    }
+    50%, 100% {
+        @include transform(scale(1) translateY(0));
+    }
+    60% {
+        @include transform(scale(0.8));
+    }
+    70% {
+        @include transform(scale(1.2));
+    }
 }
 
+@include keyframes(swipe) {
+    0% {
+        @include transform(scale(2));
+        opacity: 0;
+    }
+    50% {
+        @include transform(scale(1) rotate(0));
+        opacity: 1;   
+    }
+    100% {
+        @include transform(translateX(200%));
+    }
+}
+
+.help {
+    position: absolute;
+    
+    height: 50vh;
+    width: 25vw;
+    top: 25vh;
+    
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+
+    &.help-tap {
+        z-index: 3;
+        left: 12.5vw;
+        background-image: url(../img/help/tap.svg);
+        @include animation(tap, 2.0s, forwards);
+    }
+
+    &.help-swipe {
+        z-index: 4;
+        left: 62.5vw;
+        background-image: url(../img/help/swipe.svg);
+        @include animation(swipe, 2.0s, forwards);
+    }
+}
+
+
 @include media-orientation-query(portrait) {
-	.help {
-		font-size: 3vh;
-	}
+    .help {
+        height: 25vh;
+        width: 50vw;
+
+        &.help-tap,
+        &.help-swipe {
+            left: 25vw;
+        }
+        &.help-tap {
+            top: 12.5vh;
+        }
+
+        &.help-swipe {
+            top: 62.5vh;
+        }
+    }
 }
