--- a/_sass/_help.scss
+++ b/_sass/_help.scss
@@ -8,8 +8,12 @@
     45% {
         opacity: 1;   
     }
-    50%, 100% {
+    50% {
         @include transform(scale(1) translateY(0));
+    }
+    100% {
+        @include transform(scale(1));
+        opacity: 0;
     }
     60% {
         @include transform(scale(0.8));
