--- a/css/main.scss
+++ b/css/main.scss
@@ -6,3 +6,7 @@
 @import "animals";
 @import "progress";
 @import "help";
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
